feat(backend,frontend): finish the quality pass — all 61 remaining artifacts
The earlier quality pass covered 22 of 83 artifacts; the owner asked for all of
them. This grades and improves the other 61 — every agent, rule, ai-pattern,
command and skill in both packs — on one question the correctness pass never
asked: if a developer relies on this, do they produce better work than they
would have without it.

THE FINDING THAT OUTRANKS EVERY INDIVIDUAL GRADE

check-rule-budget.sh does not measure the rules that actually load. Line 21 sets
RULES_DIR to templates/repo-baseline/.claude/rules and stops there; it never
reads templates/packs/*/rules/. Measured with the script's own estimator:

  baseline (what the gate counts)   ~4,943 tokens  -> "OK — within budget (6000)"
  backend pack rules                ~6,123 tokens  -> invisible
  frontend pack rules               ~9,104 tokens  -> invisible

And phase-4.2-apply.md:200 gates the path-scoping injection on
`if [ "<is-multi-track>" = "true" ]`, so a SINGLE-track project receives pack
rules unscoped — always-loaded. A backend-only repo therefore always-loads
roughly 11,000 tokens against a declared 6,000 cap while the gate reports OK.
A fullstack repo scopes them to the track root, so every frontend file touch
still pulls the whole frontend set.

Every "we are within budget" claim made during this work rested on a number that
excluded the largest contributor. That is recorded here rather than quietly
fixed, because the fix belongs with the packs it governs and the measurement
should be honest first.

WALKS THAT CHANGED A PREVIOUS VERDICT

/add-endpoint was graded A- earlier and called the best command in the pack. A
second walk — "PATCH a subscriber's billing address on a multi-tenant Node API"
— confirmed the earlier flag was never fixed and the grade was too generous. It
opens by asking the user for request shape, response shape and auth; twenty-seven
lines later it says to mirror an existing sibling controller exactly